# boggle_ml

./: .clang-format  .gitignore  CMakeLists.txt  README.md  application_interface.hpp  board_evaluator.cpp  board_evaluator.hpp  common.hpp  cubeset.cpp  cubeset.hpp  main.cpp  prefix_trie.cpp  prefix_trie.hpp  runs_needed_profiling_application.hpp
tests/: test_board_evaluator.cpp  test_prefix_trie.cpp
